fusion--dev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>MarketingHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Management Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Advertised_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minimum Advertised Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Email_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box is the outfitter does not have an email address.</inlineHelpText>
        <label>No Email Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Dealers_Near__c</fullName>
        <label>Central Biller</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooftops__c</fullName>
        <label>Number of Rooftops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Customer_Group__c</fullName>
        <label>Customer Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Unregistered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Commerce Cloud Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Abandoned_Cart__c</fullName>
        <label>Commerce Cloud Abandoned Cart</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Customer_Number__c</fullName>
        <label>Commerce Cloud Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_creation_date__c</fullName>
        <label>Commerce Cloud creation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Master_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Modified_by_DW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced by Unify Commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Site_ID__c</fullName>
        <label>Commerce Cloud Site Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Approved_Prebook__c</fullName>
        <label>Opportunity Approved Prebook</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Approved Prebook</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Pending_Prebook__c</fullName>
        <label>Opportunity Pending Prebook</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Pending Prebook</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Prebook_Total__c</fullName>
        <label>Opportunity Prebook Total</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Pending Prebook, Approved Prebook</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sum__c</fullName>
        <label>Opportunity Sum</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The account has to be &quot;Order Ready&quot; for an opportunity to be processed and create a ERP sales order.</description>
        <inlineHelpText>The account has to be &quot;Order Ready&quot; for an opportunity to be processed and create a ERP sales order.</inlineHelpText>
        <label>Order Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outside_Rep_Email__c</fullName>
        <formula>Outside_SR__r.Trading_Post_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YETI Outside Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Rep_Phone__c</fullName>
        <formula>Outside_SR__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YETI Outside Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_SR_Name__c</fullName>
        <formula>Outside_SR__r.FirstName + &apos; &apos; + Outside_SR__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_SR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>YETI Outside Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outside_Sales_Rep_Text__c</fullName>
        <label>Outside Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Sales_Rep__c</fullName>
        <label>Outside Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Sale_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Point of Sale Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Brands_Carried__c</fullName>
        <label>Premium Brands Carried</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arc&apos;Teryx</fullName>
                </value>
                <value>
                    <fullName>Benelli</fullName>
                </value>
                <value>
                    <fullName>Beretta</fullName>
                </value>
                <value>
                    <fullName>Big Green Egg</fullName>
                </value>
                <value>
                    <fullName>Bote Boards</fullName>
                </value>
                <value>
                    <fullName>Burton</fullName>
                </value>
                <value>
                    <fullName>Costa Del Mar</fullName>
                </value>
                <value>
                    <fullName>Filson</fullName>
                </value>
                <value>
                    <fullName>G.Loomis</fullName>
                </value>
                <value>
                    <fullName>Gerber</fullName>
                </value>
                <value>
                    <fullName>GoPro</fullName>
                </value>
                <value>
                    <fullName>Mathew&apos;s Bows</fullName>
                </value>
                <value>
                    <fullName>Maui Jim</fullName>
                </value>
                <value>
                    <fullName>Oakley</fullName>
                </value>
                <value>
                    <fullName>Ray Ban</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>Shimano</fullName>
                </value>
                <value>
                    <fullName>Simms</fullName>
                </value>
                <value>
                    <fullName>Sitka</fullName>
                </value>
                <value>
                    <fullName>Smith &amp; Wesson</fullName>
                </value>
                <value>
                    <fullName>Southern Tide</fullName>
                </value>
                <value>
                    <fullName>Specialized</fullName>
                </value>
                <value>
                    <fullName>Stihl</fullName>
                </value>
                <value>
                    <fullName>Swarovski</fullName>
                </value>
                <value>
                    <fullName>Thule</fullName>
                </value>
                <value>
                    <fullName>Trek</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Fixture_Q1_17__c</fullName>
        <label>Product Fixture Q1&apos;17</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q4_Quantity__c</fullName>
        <label>Q&apos;4 Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_1_Quantity__c</fullName>
        <label>Q&apos;1 Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Affiliation__c</fullName>
        <label>RSC Affiliation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rambler1__c</fullName>
        <label>Rambler</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resale_Cert_Exp_Date__c</fullName>
        <inlineHelpText>This field reflects information loaded into AvaTax as of the beginning of the month. To modify please contact YETI system admin at yetihelpdesk@gmail.com.</inlineHelpText>
        <label>Resale Cert Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resale_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there a resale cert in Avatax?</description>
        <label>Resale Cert on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Address_Sync_Time__c</fullName>
        <description>Timestamp of when Address was last updated in SAP - this field is used and updated by the SAP Address Sync</description>
        <label>SAP Address Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Attribute1__c</fullName>
        <label>Dealer Locator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Ship_To_Number__c</fullName>
        <formula>ENSX_EDM__SAP_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Ship_To_Number_del__c</fullName>
        <label>SAP Ship To Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepCode__c</fullName>
        <label>SalesRepCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_ID_Generator__c</fullName>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Ship To ID Generator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Signage_Package__c</fullName>
        <label>Signage Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XS</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <formula>Parent.ENSX_EDM__SAP_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_Invoice__c</fullName>
        <formula>Invoice__r.Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_To_Epicor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync To Epicor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_1__c</fullName>
        <formula>IF( Resale_Id__c = false, &quot;N/A&quot;, 
     if(isblank(Resale_Cert_Exp_Date__c), &quot;Yes&quot;,
          if(Resale_Cert_Exp_Date__c &lt; today() , &quot;No&quot;, &quot;Yes&quot; )))</formula>
        <label>Tax Exempt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <inlineHelpText>This field reflects information loaded into AvaTax as of the beginning of the month. To modify please contact YETI system admin at yetihelpdesk@gmail.com.</inlineHelpText>
        <label>Tax Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Jurisdiction__c</fullName>
        <label>Tax Jurisdiction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landmark</fullName>
                </value>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Basecamp</fullName>
                </value>
                <value>
                    <fullName>Trailhead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueEntry__Account_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Accounts that were presented to the user at the time they created it.</description>
        <label>Account Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>Used in reporting to sum number of accounts when reporting on one-to-many objects</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in reporting to sum number of accounts when reporting on one-to-many objects</inlineHelpText>
        <label>Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization_Horizon__c</fullName>
        <formula>IF(
    OR(
        ISBLANK(Limit__c),
        0 = Limit__c
    ),
    0,
    Credit_Exposure_Horizon__c / Limit__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horizon Utilization %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <formula>IF(
    OR(
        ISBLANK(Limit__c),
        0 = Limit__c
    ),
    0,
    Credit_Exposure__c / Limit__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vendor_Compliance_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Compliance Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_ECommerce_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web ECommerce Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YETI_Footprint__c</fullName>
        <label>YETI Footprint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(SM) 60-80sq ft</fullName>
                </value>
                <value>
                    <fullName>(M) 100-150sq ft</fullName>
                </value>
                <value>
                    <fullName>(L) 200-250sq ft</fullName>
                </value>
                <value>
                    <fullName>(SIS) – 400+ sq ft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YTD_Revenue__c</fullName>
        <label>YTD Revenue - Opportunity</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Closed_In_Current_Year__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Years_In_Business__c</fullName>
        <label>Years In Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Create_in_Zendesk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create in Zendesk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Domain_Mapping__c</fullName>
        <label>Domain Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <description>Contains the result of whether the Zendesk system was updated with the Account record changes</description>
        <label>Zendesk Support Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization_Id__c</fullName>
        <description>Contains the Zendesk ORG Id</description>
        <label>Zendesk Support Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization__c</fullName>
        <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
        <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
        <label>Zendesk Support Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the record is not synced with Zendesk Organization</description>
        <label>Zendesk Support Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <description>contains the old tags before changes were made to the tags. To handle deleting tags in Zendesk system.</description>
        <label>Zendesk Support Old Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__createdUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the account that came for creation to get updated again thereby preventing the loop</description>
        <label>createdUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Customer_List_w_YTD_Sales</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>YTD_Revenue__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ENSX_EDM__SAP_Customer_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>PersonAccount.Outfitter</value>
        </filters>
        <label>Customer List w/ YTD Sales- Outside</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Inside_Sales_Rep_Text__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account1,Account.Canada</value>
        </filters>
        <filters>
            <field>ENSX_EDM__SAP_Customer_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Location_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive,Closed</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts_Under_Review</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Location_Status__c</field>
            <operation>equals</operation>
            <value>Under Review</value>
        </filters>
        <label>My Accounts - Under Review</label>
        <sharedTo>
            <group>Field_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_accounts_LAST_WEEK</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENSX_EDM__SAP_Customer_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Inside_Sales_Rep__c</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Established_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account1</value>
        </filters>
        <label>New accounts LAST WEEK</label>
    </listViews>
    <listViews>
        <fullName>Sync_Data</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Billing_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Order_Ready__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS2_CITY</field>
            <operation>equals</operation>
            <value>Houston</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account1</value>
        </filters>
        <label>Sync Data</label>
        <sharedTo>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Account1</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada</fullName>
        <active>true</active>
        <label>Canada Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ship_To</fullName>
        <active>true</active>
        <description>Ship to Account in Sync with ERP</description>
        <label>Ship to</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Name_Limited_to_50Char</fullName>
        <active>false</active>
        <description>This validation limits the Account Name field to 50 characters so it will not error out when sync with Epicor whose limit is 50 characters</description>
        <errorConditionFormula>LEN( Name )&gt;50</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name needs to be  50 characters or less to sync with Epicor!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Needed_To_Sync</fullName>
        <active>false</active>
        <description>A complete address is required to sync a new Account.</description>
        <errorConditionFormula>AND(ISBLANK(BillingStreet),ISBLANK(BillingCity),ISBLANK(BillingState),ISBLANK(BillingPostalCode),ISBLANK(BillingCountry))</errorConditionFormula>
        <errorMessage>Please add Billing Country.A complete address is required to sync a new Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Owner_of_Account</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNEW()) 
&amp;&amp; 
AND (( $Profile.Name&lt;&gt;&apos;System Administrator&apos; &amp;&amp; 
$Profile.Name&lt;&gt;&apos;Integration&apos; ), ISCHANGED(OwnerId))</errorConditionFormula>
        <errorMessage>Cannot change owner of Account unless Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Directly_Create_Account</fullName>
        <active>false</active>
        <description>An account cannot directly be created.  It must be created form converting an existing lead.</description>
        <errorConditionFormula>AND(NOT(Was_Lead__c), ISNEW(), RecordType.Name != &apos;Ship To&apos;, RecordType.Name &lt;&gt; &apos;Outfitter&apos;, $Profile.Name != &apos;System Administrator&apos;, $Profile.Name != &apos;Integration&apos;,  $Profile.Name != &apos;Support Team User - Custom Logo&apos;)</errorConditionFormula>
        <errorMessage>An account cannot be directly created.  It must be created from converting an existing lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Send_to_ERP_Inactive_Dealer</fullName>
        <active>false</active>
        <description>Cannot send request to ERP.  This dealer is inactive.</description>
        <errorConditionFormula>AND(PRIORVALUE(Sync_with_ERP__c) = FALSE, Sync_with_ERP__c = TRUE,  NOT(ISPICKVAL(Dealer_Status__c,&apos;Active&apos; )))</errorConditionFormula>
        <errorMessage>Cannot send request to ERP.  This dealer is inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_3_Letter</fullName>
        <active>false</active>
        <description>A valid two-letter state code is required.</description>
        <errorConditionFormula>AND(OR(LEN(BillingCountry) &gt;3),(LEN( ShippingCountry) &gt; 3 ))</errorConditionFormula>
        <errorMessage>A valid three-letter Country code is required.</errorMessage>
    </validationRules>
</CustomObject>